--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="inumi/index_page/index.css">
-    <link rel="stylesheet" href="inumi/header.css">
-    <link rel="shortcut icon" href="inumi/favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="index_page/index.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
     <title>Inumi / Home</title>
 </head>
 <body>
     <header>
-        <a href="inumi/index.html"><img class="Header_Logo" src="inumi/header_img/sporthub.svg" alt=""></a>
+        <a href="index.html"><img class="Header_Logo" src="header_img/sporthub.svg" alt=""></a>
         <div class="nav__link">
-            <a class="Nav_Link_Home" href="inumi/index.html">home</a>
-            <a class="Nav_Link_About" href="inumi/about_us.html">about us</a>
-            <a class="Nav_Link_How_It" href="inumi/how_it_work.html">how it work</a>
+            <a class="Nav_Link_Home" href="index.html">home</a>
+            <a class="Nav_Link_About" href="about_us.html">about us</a>
+            <a class="Nav_Link_How_It" href="how_it_work.html">how it work</a>
             <a class="Nav_Link_Download" href="">download</a>
         </div>
-        <a class="Acc_Button" href="#"><img src="inumi/header_img/acc_ico.svg" alt=""></a>
-        <button class="Find_Button"><img src="inumi/header_img/find_ico.svg" alt=""></button>
+        <a class="Acc_Button" href="#"><img src="header_img/acc_ico.svg" alt=""></a>
+        <button class="Find_Button"><img src="header_img/find_ico.svg" alt=""></button>
     </header>
 </body>
 </html>
