--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="index_page/index.css">
     <link rel="stylesheet" href="header.css">
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
-    <title>Inumi / Home</title>
+    <title>Inum / Home</title>
 </head>
 <body>
     <header>
