--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -27,5 +27,15 @@
         <a class="Acc_Button" href="#"><img src="header_img/acc_ico.svg" alt=""></a>
         <button class="Find_Button"><img src="header_img/find_ico.svg" alt=""></button>
     </header>
+    <section>
+        <div>
+            <h1 class="about_us_t">inum? what is it?</h1>
+            <p class="about_us_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis placeat nihil ipsum commodi est repellat nobis mollitia, laboriosam reiciendis eaque quas quam quisquam enim pariatur. Aperiam minima repudiandae deleniti praesentium nisi nulla dolor dolores placeat fugiat? Eveniet dolorum sint nostrum.</p>
+            <button class="about_us_b"><a href="about_us.html">Read More <img src="index_page/img/arrow.svg" alt=""></a></button>
+        </div>
+        <div class="scroll_down">
+            <img src="/index_page/img/scroll_down.svg" alt="">
+        </div>
+    </section>
 </body>
 </html>
