--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
         <button class="Find_Button"><img src="header_img/find_ico.svg" alt=""></button>
     </header>
     <section>
-        <div>
+        <div class="about_us">
             <img class="about_us_i" src="index_page/img/phone.svg" alt="">
-            <h1 class="about_us_t">inum? what is it?</h1>
-            <p class="about_us_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis placeat nihil ipsum commodi est repellat nobis mollitia, laboriosam reiciendis eaque quas quam quisquam enim pariatur. Aperiam minima repudiandae deleniti praesentium nisi nulla dolor dolores placeat fugiat? Eveniet dolorum sint nostrum.</p>
-            <button class="about_us_b"><a href="about_us.html">Read More <img src="index_page/img/arrow.svg" alt=""></a></button>
+            <div class="about_us_cl">
+                <h1 class="about_us_t">inum? what is it?</h1>
+                <p class="about_us_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis placeat nihil ipsum commodi est repellat nobis mollitia, laboriosam reiciendis eaque quas quam quisquam enim pariatur. Aperiam minima repudiandae deleniti praesentium nisi nulla dolor dolores placeat fugiat? Eveniet dolorum sint nostrum.</p>
+                <button class="about_us_b"><a href="about_us.html">Read More <img src="index_page/img/arrow.svg" alt=""></a></button>
+            </div>
         </div>
         <div class="scroll_down">
             <img src="index_page/img/scroll_down.svg" alt="">
