update header (small adaptive for notebook)

--- a/index.html
+++ b/index.html
@@ -17,15 +17,27 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="Header_Logo" src="header_img/sporthub.svg" alt=""></a>
-        <div class="nav__link">
-            <a class="Nav_Link_Home" href="index.html">home</a>
-            <a class="Nav_Link_About" href="about_us.html">about us</a>
-            <a class="Nav_Link_How_It" href="how_it_work.html">how it work</a>
-            <a class="Nav_Link_Download" href="">download</a>
+        <div class="navigation">
+            <!--<a href="index.html"><img class="Header_Logo" src="header_img/sporthub.svg" alt=""></a>
+            <div class="nav__link">
+                <a class="Nav_Link_Home" href="index.html">home</a>
+                <a class="Nav_Link_About" href="about_us.html">about us</a>
+                <a class="Nav_Link_How_It" href="how_it_work.html">how it work</a>
+                <a class="Nav_Link_Download" href="">download</a>
+            </div>
+            <a class="Acc_Button" href="#"><img src="header_img/acc_ico.svg" alt=""></a>
+            <button class="Find_Button"><img src="header_img/find_ico.svg" alt=""></button>
+        -->
+            <h1><img class="best_for_best_img" src="/header_img/inum.svg" alt=""></h1>
+            <ul>
+                <li><a href="index.html">home</a></li>
+                <li><a href="about_us.html">about us</a></li>
+                <li><a href="how_it_work.html">how it work</a></li>
+                <li><a href="#">download</a></li>
+                <a class="prikol_1_nav" href="#"><img src="header_img/acc_ico.svg" alt=""></a>
+                <a class="prikol_nav" href="#"><img src="header_img/find_ico.svg" alt=""></a>
+            </ul>
         </div>
-        <a class="Acc_Button" href="#"><img src="header_img/acc_ico.svg" alt=""></a>
-        <button class="Find_Button"><img src="header_img/find_ico.svg" alt=""></button>
     </header>
     <section>
         <div class="about_us">
@@ -33,7 +45,7 @@
             <div class="about_us_cl">
                 <h1 class="about_us_t">inum? what is it?</h1>
                 <p class="about_us_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis placeat nihil ipsum commodi est repellat nobis mollitia, laboriosam reiciendis eaque quas quam quisquam enim pariatur. Aperiam minima repudiandae deleniti praesentium nisi nulla dolor dolores placeat fugiat? Eveniet dolorum sint nostrum.</p>
-                <button class="about_us_b"><a href="about_us.html">Read More <img src="index_page/img/arrow.svg" alt=""></a></button>
+                <button class="about_us_b"><a href="about_us.html">Read More <img class="about_us_img" src="index_page/img/arrow.svg" alt=""></a></button>
             </div>
         </div>
         <div class="scroll_down">
