--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="navigation">
-            <!--<a href="index.html"><img class="Header_Logo" src="header_img/sporthub.svg" alt=""></a>
+            <!-- (Old Version Header)   <a href="index.html"><img class="Header_Logo" src="header_img/sporthub.svg" alt=""></a>
             <div class="nav__link">
                 <a class="Nav_Link_Home" href="index.html">home</a>
                 <a class="Nav_Link_About" href="about_us.html">about us</a>
@@ -28,7 +28,8 @@
             <a class="Acc_Button" href="#"><img src="header_img/acc_ico.svg" alt=""></a>
             <button class="Find_Button"><img src="header_img/find_ico.svg" alt=""></button>
         -->
-            <h1><img class="best_for_best_img" src="/header_img/inum.svg" alt=""></h1>
+        <!-- New Version Header -- >
+            <h1><img class="best_for_best_img" src="header_img/inum.svg" alt=""></h1>
             <ul>
                 <li><a href="index.html">home</a></li>
                 <li><a href="about_us.html">about us</a></li>
