add first version how it use

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="index_page/index.css">
     <link rel="stylesheet" href="header.css">
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Inum / Home</title>
 </head>
 <body>
@@ -52,6 +53,30 @@
         <div class="scroll_down">
             <img src="index_page/img/scroll_down.svg" alt="">
         </div>
+        
+        <div class="how_download">
+            <h1 class="how_download_tittle">how download inum?</h1>
+            <div step data-aos="zoom-in">
+                <h1 class="step_tittle1">step 1:</h1>
+                <p class="step_discription">
+                    go to the wh1d3.github.io/inum click on the download button and wait the end installations 
+                </p>
+                <img class="step_img" src="index_page/img/step1.svg" alt="">
+                <div class="scroll_down_step">
+                    <img src="index_page/img/scroll_down-svg-svg.svg" alt="">
+                </div>
+            </div>
+            <div step data-aos="zoom-in-left">
+                <h1 class="step_tittle">step 2:</h1>
+                <p class="step_discription">
+                    If installations end - run the apk, agree with all permissions and wait
+                </p>
+                <img class="step_img" src="index_page/img/step2.svg" alt="">
+                <div class="scroll_down_step">
+                    <img src="index_page/img/scroll_down-svg-svg.svg" alt="">
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
@@ -59,5 +84,9 @@
     </footer>
 
     <script src="index_page/scroll_down.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
