update how download

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div step data-aos="zoom-in">
                 <h1 class="step_tittle1">step 1:</h1>
                 <p class="step_discription">
-                    go to the wh1d3.github.io/inum click on the download button and wait the end installations 
+                    go to the <span>wh1d3.github.io/inum</span> click on the download button and wait the end installations 
                 </p>
                 <img class="step_img" src="index_page/img/step1.svg" alt="">
                 <div class="scroll_down_step">
@@ -69,12 +69,19 @@
             <div step data-aos="zoom-in-left">
                 <h1 class="step_tittle">step 2:</h1>
                 <p class="step_discription">
-                    If installations end - run the apk, agree with all permissions and wait
+                    If installations end - run the apk, <span>agree</span> with all permissions and wait
                 </p>
                 <img class="step_img" src="index_page/img/step2.svg" alt="">
                 <div class="scroll_down_step">
                     <img src="index_page/img/scroll_down-svg-svg.svg" alt="">
                 </div>
+            </div>
+            <div step data-aos="zoom-in-left">
+                <h1 class="step_tittle">step 3:</h1>
+                <p class="step_discription">
+                    Run app, enter ur weight and height and start use <span>inum</span>
+                </p>
+                <img class=" step_img3" src="index_page/img/phone.svg" alt="">
             </div>
         </div>
     </section>
