update how download

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
                 <img class=" step_img3" src="index_page/img/phone.svg" alt="">
             </div>
         </div>
+
+        <div class="Site_News">
+
+        </div>
+        
     </section>
 
     <footer>
