--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="index.html">home</a></li>
                 <li><a href="about_us.html">about us</a></li>
                 <li><a href="how_it_work.html">how it work</a></li>
-                <li><a href="#">download</a></li>
+                <li><a href="inum.apk">download</a></li>
                 <a class="prikol_1_nav" href="auth.html"><img src="header_img/acc_ico.svg" alt=""></a>
                 <a class="prikol_nav" href="#"><img src="header_img/find_ico.svg" alt=""></a>
             </ul>
