--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
         </div>
 
         <div class="Site_News">
-
+            <h1>inum News</h1>
+            <div class="news_colapse">
+                
+            </div>
         </div>
         
     </section>
