--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
             <div class="News_Bck">
                 <div class="news_collapse">
                     <img src="" alt="photo_news">
-                    <h2>News Tittle</h2>
-                    <p>Description</p>
+                    <h2>Global Update!</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                     <a href="site_news.html">More</a>
                 </div>
                 <div class="news_collapse">
                     <img src="" alt="photo_news">
-                    <h2>News Tittle</h2>
-                    <p>Description</p>
+                    <h2>First App?!</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur amet adipisicing.</p>
                     <a href="site_news.html">More</a>
                 </div>
                 <div class="news_collapse">
                     <img src="" alt="photo_news">
-                    <h2>News Tittle</h2>
-                    <p>Description</p>
+                    <h2>First Site?!</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a href="site_news.html">More</a>
                 </div>
             </div>
