update news site

--- a/index.html
+++ b/index.html
@@ -92,19 +92,25 @@
                     <img src="" alt="photo_news">
                     <h2>Global Update!</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                    <a href="site_news.html">More</a>
+                    <div class="button_news">
+                        <a href="site_news.html">More</a>
+                    </div>
                 </div>
                 <div class="news_collapse">
                     <img src="" alt="photo_news">
                     <h2>First App?!</h2>
                     <p>Lorem ipsum dolor sit amet consectetur amet adipisicing.</p>
-                    <a href="site_news.html">More</a>
+                    <div class="button_news">
+                        <a href="site_news.html">More</a>
+                    </div>
                 </div>
                 <div class="news_collapse">
                     <img src="" alt="photo_news">
                     <h2>First Site?!</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <a href="site_news.html">More</a>
+                    <div class="button_news">
+                        <a href="site_news.html">More</a>
+                    </div>
                 </div>
             </div>
         </div>
