end work with site news, make first verison footer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index_page/index.css">
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="footer.css">
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Inum / Home</title>
@@ -114,13 +115,36 @@
                 </div>
             </div>
         </div>
-        
     </section>
 
     <footer>
-
+        <div>
+            <img src="header_img/inum.svg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <a class="contact_footer" href="tel:38012345678">+3801234567</a>
+            <div class="navigation_footer">
+                <h2>Fast Navigation</h2>
+                <ul>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="about_us.html">about us</a></li>
+                    <li><a href="how_it_work.html">how it work</a></li>
+                    <li><a href="inum.apk">download</a></li>
+                </ul>
+            </div>
+            <div class="navigation_two_footer">
+                <h2>Contacts Us</h2>
+                <ul>
+                    <li><a href="tel:+380662858959">phone number</a></li>
+                    <li><a href="mail:inum@gmail.com">e-mail</a></li>
+                    <li><a href="contact us">contact us</a></li>
+                </ul>
+            </div>
+            <p class="footer_lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat eos deserunt enim numquam!</p>
+            <img class="scroll_up_img" src="index_page/img/scroll_up.png" alt="">
+        </div>
     </footer>
 
+    <script src="index_page/scroll_up.js"></script>
     <script src="index_page/scroll_down.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
