update about us page

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         </div>
     </footer>
 
-    <script src="index_page/scroll_up.js"></script>
-    <script src="index_page/scroll_down.js"></script>
+    <script src="scroll_up.js"></script>
+    <script src="scroll_down.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
